# Sritej_Projects-TU-clean

./: .gitignore  README.md  README.txt
ActiveCarSpoilerCFDSIM/Design/: Airfoil Points.txt  Back_mounting_plate_new.prt  Front Leg.prt  NACA 4digit inch.prt  Powered_Back_Leg_assembly.prt  Profile.prt  front plate.prt  mirror_Powered_Back_Leg_assembly.prt  model1.prt  powered_backleg_retractor.prt  spoiler with plates.prt
AgenticAIApps/: LLM_Tool_bind.ipynb  MathematicalAgent
AgenticAIApps/AgentDataAnalytics/: SQLQueryingAgent.py  Visualization_Agent.ipynb
AgenticAIApps/Upscaling_algo_DiffusionModels/: LDM.py
EmbeddedCodeLab/Lab2_HelloLaunchPad/: HelloLaunchPad.axf  HelloLaunchPad.build_log.htm  HelloLaunchPad.htm  HelloLaunchPad.lnp  HelloLaunchPad.map  Lab2.uvgui.srite  Lab2.uvopt  Lab2.uvproj  Lab2_HelloLaunchPad.dep
EmbeddedCodeLab/Lab4_IO/: IO.axf  IO.build_log.htm  IO.htm  IO.map  Lab4.uvgui.srite  Lab4.uvopt  Lab4.uvproj  Lab4_IO.dep  main.c
EmbeddedCodeLab/Lab6_BranchingFunctionsDelays/: BranchingFunctionsDelays.c  Lab6.axf  Lab6.build_log.htm  Lab6.htm  Lab6.map  Lab6.uvgui.srite  Lab6.uvopt  Lab6.uvproj  Lab6_Lab6.dep
EmbeddedCodeLab/Lab7_HeartBlock/: Lab7.axf  Lab7.htm  (+7 more)
HeatTransferSolver/: Makefile  main.cpp
MachineLearingDataChallenge/: data_preparation.py  environment.yml  feature_calculation.py  model_gp_45.joblib
RAGLLM/: MemoryLLMRAG.ipynb
ScriptsForusefulForCFD/: 1linespectralanalysis.m  extractPointsToh5.ipynb
brusseltorSolver/: CMakeLists.txt  brusselator.cpp  brusselator.hpp  integrator.cpp  integrator.hpp  output.csv  solver.cpp
(+173 files in other folders)
